===================================
imGlossary v1.00 RC-2
===================================
- Added: option to set background colour searched terms
- Added: import script Wordbook
- Added: About page (IcmsModuleAbout)
- Added: link to module update
- Added: pdf support
- Added: captcha to submit form
- Added: captcha to request form
- Added: captcha can be turned on/off in Preferences

- Replaced: import script Dictionary
- Replaced: admin menu (displayAdminMenu)

- Removed: imglossary/templates/imglossary_request.html
- Removed: imglossary/templates/imglossary_submit.html

- Fixed: problem search option, unknown function
- Fixed: letter-bar, only those letters containing terms have url assigned
- Fixed: pagination for listing 'All'
- Fixed: url administration icon in random block


===================================
imGlossary v1.00 RC-1
===================================
First version of imGlossary
- Added: prefix to module functions
- Added: option to hide author of an entry
- Added: comments button in administration
- Added: Social Bookmarks
- Added: administration icon

- Restyled index page
- Integrated admin/submissions.php in admin/index.php
- Replaced icons

- Module folder can be renamed
- Fixed: search option
- Fixed: submit form
- Fixed: GIJOE's myblocksadmin, works with ICMS blocks
- Fixed: vulnerability, used StopXSS
- Fixed: linking to offline terms


===================================
Wordbook v1.16
===================================
Fix: (by Alama) Grammatical and stylistic corrections to the English language interface to Wordbook 1.15 in main.php and modinfo.php
Fix: Anonymous users can now see sub menu items if appropriated permissions are set.
Fix: Fixed a bug in admin/entry.php. When an administrator modied an entry, became proprietary of entry and the combo box in which he could choose the author was ignored.