@@ -255,4 +255,19 @@ function imglossary_wordbook_module_included() {
   return $imglossary_wordbook_module_included;
 }
 
+// Check if Wiwimod module is installed
+function imglossary_wiwimod_module_included() {
+  static $imglossary_wiwimod_module_included;
+  if ( !isset( $imglossary_wiwimod_module_included ) ) {
+    $modules_handler = xoops_gethandler( 'module' );
+    $dict_mod = $modules_handler -> getByDirName( 'wordbook' );
+    if ( !$dict_mod ) {
+      $dict_mod = false;
+    } else {
+      $imglossary_wiwimod_module_included = $dict_mod -> getVar( 'isactive' ) == 1;
+    }
+  }
+  return $imglossary_wiwimod_module_included;
+}
+
 ?>
